Fix pledgie text alignment
svn path=/trunk/www/sites/planet/; revision=1311020

--- a/website/pledgie/banner.css
+++ b/website/pledgie/banner.css
@@ -5,15 +5,6 @@
   text-align: center;
   padding-top: 10px;
 }
-#pledgie-banner hr {
-  height: 1px;
-  background-color: #bfbfbf;
-  background-image: none;
-  filter: none;
-  border: 0;
-  margin-left: 8px;
-  margin-right: 16px;
-}
 #pledgie-graph {
   height: 12px;
   width: 480px;
@@ -52,7 +43,11 @@
   float: right;
 }
 #pledgie-text {
-  padding-top: 7px;
+  border-top: 1px solid #bbb;
+  margin: 10px;
+  margin-left: 7px;
+  margin-right: 15px;
+  padding: 10px;
   font-size: 1.2em;
   text-shadow: 0px 1px 0px #fafafa;
 }
